# stringsutil

./: .cppcheck  .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  Makefile.in  NOTICE  README.md  SECURITY.md  base.strings  configure  configure.ac  es.strings  es_strings.h  fr.strings  fr_strings.h  libsf.3  libsf.md  libsf.pc.in  makesrcdist  sf-core.c  sf-private.h  sf-simple.c  sf.c  sf.h  strings-file-private.h  strings-file.c  strings-file.h  stringsutil.1  stringsutil.c  stringsutil.html  stringsutil.md  test-yy.strings  test-zz.po  test-zz.strings
.github/workflows/: build.yml  coverity.yml
snap/: snapcraft.yaml
